# pluma-cmake

./: CMakeLists.txt  conanfile.py
Pluma-1.1/: readme
Pluma-1.1/src/Pluma/: PluginManager.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/example/src/plugin/: Connector.cpp
